Added docs builder to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
   "dependencies": {},
   "builders": {
     "graphql": "1.x",
-    "node": "4.x"
+    "node": "4.x",
+    "docs": "0.x"
   },
   "scripts": {
     "prereleasy": "bash lint.sh"
