--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,45 @@
 {
-  "name": "graphql-example",
+  "name": "session-client",
   "vendor": "vtex",
   "version": "0.2.1",
-  "title": "GraphQL Example",
-  "description": "Reference app for VTEX IO GraphQL Services",
-  "mustUpdateAt": "2022-01-04",
+  "title": "Session Client",
+  "description": "",
   "categories": [],
   "dependencies": {},
   "builders": {
     "docs": "0.x",
     "graphql": "1.x",
-    "node": "6.x"
-  },
-  "scripts": {
-    "prereleasy": "bash lint.sh"
+    "node": "6.x",
+    "react": "3.x"
   },
   "credentialType": "absolute",
   "policies": [
     {
-      "name": "colossus-fire-event"
+      "name": "outbound-access",
+      "attrs": {
+        "host": "{{account}}.vtexcommercestable.com.br",
+        "path": "/api/sessions/*"
+      }
     },
     {
-      "name": "colossus-write-logs"
+      "name": "outbound-access",
+      "attrs": {
+        "host": "portal.vtexcommercestable.com.br",
+        "path": "/api/segments/*"
+      }
     },
     {
-      "name": "graphql-query"
+      "name": "outbound-access",
+      "attrs": {
+        "host": "portal.vtexcommercebeta.com.br",
+        "path": "/api/segments/*"
+      }
+    },
+    {
+      "name": "POWER_USER_DS"
+    },
+    {
+      "name": "Get_Account_By_Identifier"
     }
   ],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
