--- a/node/package.json
+++ b/node/package.json
@@ -1,18 +1,16 @@
 {
   "dependencies": {
+    "cookie": "^0.4.1",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.25",
+    "@types/cookie": "^0.4.0",
     "@types/node": "^12.0.0",
     "@types/ramda": "types/npm-ramda#dist",
-    "@vtex/api": "6.13.1",
-    "tslint": "^5.12.0",
-    "tslint-config-vtex": "^2.1.0",
-    "typescript": "3.7.3"
-  },
-  "scripts": {
-    "lint": "tsc --noEmit && tslint -c tslint.json './**/*.ts'"
+    "@vtex/api": "6.39.0",
+    "@vtex/tsconfig": "^0.4.4",
+    "typescript": "3.9.7"
   },
   "version": "0.2.1"
 }
