--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -1,28 +1,10 @@
 {
+  "extends": "@vtex/tsconfig",
   "compilerOptions": {
     "types": ["node"],
     "typeRoots": ["node_modules/@types"],
-    "target": "es2017",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "allowJs": false,
-    "checkJs": false,
-    "esModuleInterop": true,
-    "noEmitOnError": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "skipLibCheck": true
+    "noEmitOnError": true
   },
-  "typeAcquisition": {
-    "enable": false
-  },
-  "include": ["./**/*.ts", "./typings/*.d.ts"],
-  "exclude": ["node_modules"]
+  "include": ["./**/*.ts", "./typings/*.d.ts"]
 }
