--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "license": "UNLICENSED",
   "scripts": {
     "lint": "eslint --ext js,jsx,ts,tsx .",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\""
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\"",
+    "graphql-markdown": "node graphql-markdown-generator.js",
+    "build": "graphql-schema-utilities --includeDirectives -s \"./graphql/**/*.{gql,graphql}\" -o ./merged.graphql",
+    "test": "graphql-markdown ./graphql/schema.graphql > blabla.md"
   },
   "husky": {
     "hooks": {
@@ -21,11 +24,18 @@
     ]
   },
   "devDependencies": {
+    "@graphql-tools/load-files": "^6.5.3",
+    "@graphql-tools/merge": "^8.2.13",
+    "@graphql-tools/schema": "^8.3.13",
+    "@graphql-tools/stitching-directives": "^2.2.17",
     "@types/node": "^12.12.21",
-    "@vtex/prettier-config": "^0.3.1",
+    "@vtex/api": "^6.45.12",
     "@vtex/danger": "^0.2.7",
+    "@vtex/prettier-config": "^0.3.1",
     "eslint": "^6.8.0",
     "eslint-config-vtex": "^12.7.0",
+    "graphql": "^15.0.0",
+    "graphql-markdown": "^6.0.0",
     "husky": "^4.2.0",
     "lint-staged": "^10.0.2",
     "prettier": "^2.0.5",
