--- a/node/package.json
+++ b/node/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "@sanity/client": "^6.22.0"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
     "@types/ramda": "types/npm-ramda#dist",
-    "@vtex/api": "6.44.0",
+    "@vtex/api": "6.47.0",
     "@vtex/tsconfig": "^0.5.6",
     "typescript": "3.9.7"
   },
