--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "CHANGE_ME",
-  "private": true,
+  "private": false,
   "license": "UNLICENSED",
   "scripts": {
     "lint": "eslint --ext js,jsx,ts,tsx .",
