--- a/node/package.json
+++ b/node/package.json
@@ -1,14 +1,12 @@
 {
   "dependencies": {
-    "ramda": "^0.26.1",
-    "@sanity/client": "^6.22.0"
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
     "@types/ramda": "types/npm-ramda#dist",
     "@vtex/api": "6.47.0",
     "@vtex/tsconfig": "^0.5.6",
-    "logicinfopartnerbr.sanity-resolver": "https://sanity--logicinfopartnerbr.myvtex.com/_v/private/typings/linked/v1/logicinfopartnerbr.sanity-resolver@0.0.0-beta+build1727356291/public/@types/logicinfopartnerbr.sanity-resolver",
     "typescript": "3.9.7"
   },
   "scripts": {
